--- a/src/styles/_resets.sass
+++ b/src/styles/_resets.sass
@@ -1,10 +1,14 @@
 @use "./_colors.sass" as var
 
 body
+	margin: 0
+	gap: 50px
 	color: white
 	display: flex
+	width: 100dvw
+	height: 100dvh
 	align-items: center
-	flex-direction: column
+	justify-content: center
 	font-family: var.$font-family
 	background-color: var.$background-color
 
@@ -14,3 +18,13 @@ body
 
 h1, .game-over
 	text-align: center
+
+section
+	height: 421px
+	overflow-y: hidden
+	transition: height 0.5s
+
+h1 > span
+	font-size: 16px
+	font-style: italic
+	font-weight: normal
