--- a/src/styles/_resets.sass
+++ b/src/styles/_resets.sass
@@ -7,6 +7,7 @@ body
 	display: flex
 	width: 100dvw
 	height: 100dvh
+	flex-wrap: wrap
 	align-items: center
 	justify-content: center
 	font-family: var.$font-family
