--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -84,5 +84,6 @@
 	width: 100%
 	border: none
 	padding: 20px
+	cursor: pointer
 	color: var.$button-color
 	background-color: var.$button-background-color
